# agent_runtime

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  delete_functions.py  delete_functions_regex.py  fix_stray_commas.py  pyproject.toml  remove_fallback_kwarg.py  setup.py
docs/: public-api.md
scripts/: build_release_artifacts.py  live_provider_smoke.py  live_provider_smoke_plan.py
tests/: conftest.py  runtime_boundary_fakes.py  runtime_client_execution_harness.py  test_agent_runtime.py  test_built_in_provider_lifecycle_policy_behavior.py  test_builtin_provider_agent_event_building_behavior.py  test_builtin_provider_client_behavior.py  test_builtin_provider_codex_parsed_output_behavior.py  test_builtin_provider_opencode_parsed_output_behavior.py  test_builtin_provider_parsed_output_behavior.py  test_builtin_provider_rendering_behavior.py  test_builtin_provider_session_invocation_dispatch_behavior.py  test_builtin_provider_stream_interpretation_behavior.py  test_cancellation_token_behavior.py  test_continuation_behavior.py  test_errors.py  test_live_provider_probe.py  test_live_provider_probe_cancel.py  test_live_provider_probe_plan.py  test_live_provider_smoke_artifacts.py  test_live_provider_smoke_plan.py  test_live_runtime_output_timeout_context.py  test_portable_continuation_payload_behavior.py  test_provider_invocation_adapter_behavior.py  test_provider_invocation_failure_error_behavior.py  test_provider_output_behavior.py  test_release_artifacts.py  test_release_docs.py  test_resumed_session_run_request.py  test_runtime_continuation_behavior.py  (+14 more)
(+143 files in other folders)
